document.config has become document.domConfig to prevent backwards-compat issues.  Bug 222733, r+sr=jst